RESOLVED FIXED125936
WTF fails to compile with gcc 4.8.2 and -Werror=array-bounds
https://bugs.webkit.org/show_bug.cgi?id=125936
Summary WTF fails to compile with gcc 4.8.2 and -Werror=array-bounds
Hugo Parente Lima
Reported 2013-12-18 11:55:33 PST
There's the error: Source/WTF/wtf/dtoa/double-conversion.cc:597:26: error: array subscript is above array bounds [-Werror=array-bounds] "buffer[buffer_pos] = '\0';" Just because buffer_pos a int instead of an unsigned int.
Attachments
Patch (1.43 KB, patch)
2013-12-18 12:00 PST, Hugo Parente Lima
no flags
Hugo Parente Lima
Comment 1 2013-12-18 12:00:05 PST
WebKit Commit Bot
Comment 2 2013-12-19 09:08:17 PST
Comment on attachment 219555 [details] Patch Clearing flags on attachment: 219555 Committed r160834: <http://trac.webkit.org/changeset/160834>
WebKit Commit Bot
Comment 3 2013-12-19 09:08:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.