WTF fails to compile with gcc 4.8.2 and -Werror=array-bounds https://bugs.webkit.org/show_bug.cgi?id=125936

Reviewed by Anders Carlsson.

* wtf/dtoa/double-conversion.cc: Use a unsigned instead of int on buffer_pos type.


Canonical link: https://commits.webkit.org/143976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160834 268f45cc-cd09-0410-ab3c-d52691b4dbfc